fix button align on mobile screens

--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,11 @@ html {
     padding-top: 200px;
   }
 }
+@media (max-width: 750px) and (max-height: 700px) {
+  .hero__title {
+    padding-top: 150px;
+  }
+}
 
 .about__wrapper {
   display: flex;
