--- a/css/scss/blocks/hero.scss
+++ b/css/scss/blocks/hero.scss
@@ -40,4 +40,9 @@
       padding-top: 200px;
     }
   }
+  @media (max-width: 750px) and (max-height: 700px) {
+    &__title {
+      padding-top: 150px;
+    }
+  }
 }
